--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,8 @@ html{
 
 .header{
 height: 80px; width: 100%;
-background-color: rgb(43, 41, 41);   
+background-color: rgb(43, 41, 41); 
+  
 }
 .logo{
     float: left;
@@ -17,14 +18,25 @@ background-color: rgb(43, 41, 41);
     font-size: 30px;
     padding: 15px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    transition: all 2s;
+}
+.logo:hover{
+  color: gold;
+
 }
 .logo span {
-    color: whitesmoke;
+  transition: all 2s;  
+  color: whitesmoke;
+}
+.logo span:hover{
+  color: gold;
 }
 
+  
 header input{
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-font-size: 20px;
+font-size: 17px;
+margin-left: 9px;
 margin-bottom: 15px;
 margin-top: 15px;
 }
@@ -41,21 +53,28 @@ display: inline-block;
 .barra ul li a{
     text-decoration: none;
     color: whitesmoke;
-    font-size: 25px;
+    transition: all 2s;
+    font-size: 23px;
     padding: 10px;
+    margin-top: 5px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding-right: 30px;  
 }
+
 main{
     background-image: url(img/banner2.jpg);
     background-size: cover;
     background-position: center;
     height: calc(40vh - 70px);
     width: 100%;
-
+}
+main:hover{
+  transform: scale(1.05);
+transition: all 0.8s;
 }
 .call a{
     background-color: rgb(43, 41, 41);
-    color: whitesmoke;
+    color: lavender;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none;
     float: left;
@@ -116,7 +135,7 @@ main{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
     h3{
-      font-size: 20px;
+      font-size: 25px;
       text-align: left;
       background-color: rgb(43, 41, 41);
       color: whitesmoke;
@@ -214,7 +233,72 @@ iframe{
   background-color: rgb(43, 41, 41);
   bottom: 8em; 
   align-items: center;
+  border: 5px;
+  border-radius: 20px 20px 20px 20px;
+  box-shadow: #000;
   }
+
+h1{
+  width: 100px;
+  height: 100px;
+  font-size: 30px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: grey;
+  animation-name: efecto;
+  animation-iteration-count: 2; animation-timing-function: ease-in;
+  animation-duration: 18s;
+}
+@keyframes efecto {
+  0% {
+    width: 100px;
+  }
+  10% {
+    background-color: black
+    ;
+  }
+  100% {
+    width: 500%;
+    background-color: whitesmoke;
+  }
+}
+
+h2{
+  width: 100px;
+  height: 100px;
+  font-size: 30px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: grey;
+  animation-name: efecto;
+  animation-iteration-count: 3;
+  animation-timing-function: ease-in;
+  animation-duration: 25s;
+}
+@keyframes efecto {
+  0% {
+    width: 100px;
+  }
+  10% {
+    background-color: black;
+  }
+  100% {
+    width: 500%;
+    background-color: whitesmoke;
+  }
+}
+
+input{
+  transition: all 2s;
+  }
+  
+  input:focus{
+      font-size: 20px;
+      border: 3px black;
+      color: grey;
+  }
+  input::placeholder{
+      color: black;
+  }
+
 footer{
     background-color: rgb(43, 41, 41) ;
     min-height: 50px;
