--- a/estilos.css
+++ b/estilos.css
@@ -3,10 +3,12 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+  background-color: rgb(43, 41, 41);
+}
 html{
     scroll-behavior: smooth;
 }
-
 .header{
 height: 80px; width: 100%;
 background-color: rgb(43, 41, 41); 
@@ -247,6 +249,7 @@ h1{
   animation-name: efecto;
   animation-iteration-count: 2; animation-timing-function: ease-in;
   animation-duration: 18s;
+  animation-delay: 1s;
 }
 @keyframes efecto {
   0% {
@@ -261,31 +264,27 @@ h1{
     background-color: whitesmoke;
   }
 }
-
 h2{
-  width: 100px;
-  height: 100px;
   font-size: 30px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  background-color: grey;
-  animation-name: efecto;
-  animation-iteration-count: 3;
-  animation-timing-function: ease-in;
-  animation-duration: 25s;
+    text-align: center;
+    color: whitesmoke;
+    text-transform: capitalize;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 5px 5px 5px grey;
+    animation-duration: 5s;
+    animation-name: aparecer;
+    animation-delay: 1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
-@keyframes efecto {
-  0% {
-    width: 100px;
-  }
-  10% {
-    background-color: black;
-  }
-  100% {
-    width: 500%;
-    background-color: whitesmoke;
-  }
+@keyframes aparecer {
+  0%{
+opacity: 0;  
 }
-
+100%{
+  opacity: 1;
+}
+}
 input{
   transition: all 2s;
   }
