--- a/estilos.css
+++ b/estilos.css
@@ -6,6 +6,7 @@
 
 body{
   background-color: rgb(43, 41, 41);
+  min-height: 100vh;
 }
 html{
     scroll-behavior: smooth;
@@ -18,7 +19,7 @@ background-color: rgb(43, 41, 41);
 .logo{
     float: left;
     color: whitesmoke;
-    font-size: 30px;
+    font-size: 35px;
     padding: 15px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     transition: all 2s;
@@ -35,13 +36,11 @@ background-color: rgb(43, 41, 41);
   color: gold;
 }
 
-  
 header input{
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-size: 17px;
 margin-left: 9px;
-margin-bottom: 15px;
-margin-top: 15px;
+margin-top: 9px;
 }
 
 .barra{
@@ -71,20 +70,7 @@ main{
     height: calc(40vh - 70px);
     width: 100%;
 }
-main:hover{
-  transform: scale(1.05);
-transition: all 0.8s;
-}
-.call a{
-    background-color: rgb(43, 41, 41);
-    color: lavender;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-decoration: none;
-    float: left;
-}
-.call a:hover{
-    background-color: gray;
-}
+
 .slider-container {
     display: flex;
     width: 60%;
@@ -232,9 +218,8 @@ iframe{
   text-align: justify;
 }
 .mapa{
-  display: flex;
+  display: grid;
   background-color: rgb(43, 41, 41);
-  bottom: 8em; 
   align-items: center;
   border: 5px;
   border-radius: 20px 20px 20px 20px;
@@ -298,7 +283,82 @@ input{
   input::placeholder{
       color: black;
   }
-
+  .contenedor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .contenedor-botones {
+    width: 1200px;
+	  margin: auto;
+	  padding: 100px 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px; 
+  }
+  .boton {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 15%;
+    height: 15px;
+    background: black;
+    background-position: center ;
+    color: whitesmoke;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    font-weight: 30;
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: .3s ease all;
+    border-radius: 3px;
+    position:relative;
+    overflow: hidden;
+  }
+  
+  .boton span {
+    position: relative;
+    z-index: 2;
+    transition: .3s ease all;
+  }
+  .boton.uno::after {
+    content: "";
+    width: 1px;
+    height: 1px;
+    background: none;
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transition: .3s ease-in-out all;
+    border-radius: 100px;
+    transform-origin: center;
+  }
+  
+  .boton.uno:hover::after {
+    transform: scale(400);
+    background: gray;
+  }
+  .boton.dos::after {
+    content: "";
+    width: 1px;
+    height: 1px;
+    background: none;
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transition: .3s ease-in-out all;
+    border-radius: 100px;
+    transform-origin: center;
+  }
+  
+  .boton.dos:hover::after {
+    transform: scale(400);
+    background: gray;
+  }
 footer{
     background-color: rgb(43, 41, 41) ;
     min-height: 50px;
